# news-radar

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  ruff.toml
.github/: SECRETS.md
.github/workflows/: ci.yml  daily.yml
data/: sample_rss.json  sources.json
docs/: index.html
docs/assets/: .gitkeep
scripts/: fetch_sample.py
src/: __init__.py  __version__.py  briefing.py  config.py  deduplicator.py  exceptions.py  logger.py  main.py  models.py  orchestrator.py  retry.py  search.py
src/ai/: __init__.py  anthropic_adapter.py  base.py  gemini_adapter.py  openai_adapter.py  scorer.py  summarizer.py
src/delivery/: __init__.py  dispatcher.py  email.py  email_template.py  webhook.py
src/mcp/: __init__.py
src/pipeline/: __init__.py  cost_ledger.py  event_log.py  retry_budget.py  source_health.py
src/renderers/: __init__.py  github_pages.py  html.py  markdown.py
src/scoring/: __init__.py  history.py  rubric.py
src/scrapers/: __init__.py  base.py  hackernews.py  reddit.py  rss.py
src/setup/: __init__.py  sources_loader.py  wizard.py
src/storage/: __init__.py  briefing_store.py  score_cache.py
tests/: conftest.py  test_briefing_clustering.py  test_ci_workflows.py  test_cli_day23.py  test_cli_smoke.py  test_config_sources.py  test_cost_ledger.py  test_deduplicator.py  test_delivery.py  test_event_log.py  test_event_log_and_cli.py  test_models.py  test_orchestrator.py  test_renderers.py  test_retry.py  test_score_cache.py  test_scoring.py  test_search.py  test_semantic_dedup.py  test_source_health.py  test_summarizer_briefing.py  test_wizard.py
tests/test_ai/: test_scorer.py
tests/test_scrapers/: __init__.py  test_hackernews.py  test_reddit.py  test_rss.py
