[project]
name = "news-radar"
version = "0.1.0"
description = "📡 Your personal AI-powered news radar — fetch, score, and summarize daily briefings from RSS, Hacker News, and Reddit."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Harshads-git" }
]

dependencies = [
    # HTTP client (async-first)
    "httpx>=0.27.0",
    # RSS/Atom feed parsing
    "feedparser>=6.0.11",
    # AI provider SDKs
    "openai>=1.54.0",
    "google-genai>=0.3.0",
    "anthropic>=0.39.0",
    # Data validation & settings
    "pydantic>=2.9.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    # Date/time utilities
    "python-dateutil>=2.9.0",
    # Beautiful terminal output
    "rich>=13.9.0",
    # Retry logic with exponential backoff
    "tenacity>=9.0.0",
    # Web search (DuckDuckGo, no API key needed)
    "ddgs>=7.0.0",
    # HTML parsing for scraper enrichment
    "beautifulsoup4>=4.12.0",
    # Markdown rendering
    "markdown>=3.10.2",
    # MCP protocol support
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
    "questionary>=2.0.0",
]

[project.scripts]
news-radar = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = ["E501"]  # line too long handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["src"]
